--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,6 @@ allprojects {
     repositories {
         google()
         jcenter()
-        mavenLocal()
     }
 }
 
@@ -41,7 +40,7 @@ ext {
     bintrayRepo = 'updraft'
     bintrayName = 'updraft-sdk'
 
-    publishedGroupId = 'com.appswithlove.updraftsdk'
+    publishedGroupId = 'com.appswithlove.updraft'
     libraryName = 'updraft-sdk'
     artifact = 'updraft-sdk'
 
