--- a/updraft_sdk/build.gradle
+++ b/updraft_sdk/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: 'com.jfrog.bintray'
 
 def packageName = 'com.appswithlove.updraftsdk'
-def libraryVersion = '1.0.3'
+def libraryVersion = '1.0.4'
 
 android {
 
@@ -15,7 +15,7 @@ android {
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
-        versionName "1.0.3"
+        versionName "1.0.4"
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
@@ -196,5 +196,12 @@ bintray {
         version {
             desc = libraryDescription
         }
+    }
+}
+
+afterEvaluate {
+    assembleRelease.dependsOn clean
+    tasks.withType(GenerateMavenPom).all {
+        it.dependsOn assembleRelease
     }
 }
