--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.kotlin_version = '1.6.0'
 
     repositories {
         google()
-        jcenter()
-        maven {
-            url "${artifactory_contextUrl}" + "/remote-repos"
-            credentials {
-                username = "${artifactory_user}"
-                password = "${artifactory_password}"
-            }
-        }
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.2'
-        classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:4.9.3'
-        classpath 'com.appswithlove.updraft:updraft:2.1.1'
+        classpath 'com.android.tools.build:gradle:7.0.3'
+        classpath 'com.appswithlove.updraft:updraft:2.1.7'
 
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.appswithlove.loco:loco:0.2.4'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -28,6 +22,7 @@ buildscript {
 allprojects {
     repositories {
         google()
+        mavenCentral()
         jcenter()
     }
 }
