--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ buildscript {
         classpath 'com.android.tools.build:gradle:7.0.3'
         classpath 'com.appswithlove.updraft:updraft:2.1.7'
 
+        classpath 'org.jetbrains.dokka:dokka-gradle-plugin:1.5.0'
+        classpath 'com.vanniktech:gradle-maven-publish-plugin:0.13.0'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.appswithlove.loco:loco:0.2.4'
@@ -44,7 +46,7 @@ ext {
     siteUrl = 'https://github.com/appswithlove/updraft-sdk-android'
     gitUrl = 'https://github.com/appswithlove/updraft-sdk-android.git'
 
-    libraryVersion = '1.0.6'
+    libraryVersion = '1.0.8'
 
     developerId = 'satorikomeiji'
     developerName = 'Ilia Kuznetcov'
