--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation "com.google.android.material:material:1.4.0"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.appswithlove.updraft:updraft-sdk:1.0.3'
     testImplementation 'junit:junit:4.12'
