--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'updraft'
+apply plugin: 'com.appswithlove.updraft'
 
 android {
     compileSdkVersion 33
@@ -50,7 +50,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation "com.google.android.material:material:1.4.0"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'com.appswithlove.updraft:updraft-sdk:1.0.3'
+    implementation 'com.appswithlove.updraft:updraft-sdk:1.0.13'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
