--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,11 @@ apply plugin: 'kotlin-android'
 apply plugin: 'com.appswithlove.updraft'
 
 android {
-    compileSdk 33
+    compileSdkVersion 33
     defaultConfig {
         applicationId "com.appswithlove.updraftsdk"
-        minSdk 19
-        targetSdk 33
+        minSdkVersion 19
+        targetSdkVersion 33
         versionCode 4
         versionName "1.3"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
