--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,13 @@ apply plugin: 'kotlin-android'
 apply plugin: 'com.appswithlove.updraft'
 
 android {
-    compileSdkVersion 33
+    namespace "com.appswithlove.updraftsdk"
+
+    compileSdk 34
     defaultConfig {
         applicationId "com.appswithlove.updraftsdk"
         minSdkVersion 19
-        targetSdkVersion 33
+        targetSdkVersion 34
         versionCode 4
         versionName "1.3"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
@@ -31,14 +33,18 @@ android {
         }
     }
 
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+
     buildFeatures {
         viewBinding true
+        buildConfig = true
     }
 
     updraft {
@@ -49,13 +55,13 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(path: ':updraft-sdk')
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation "com.google.android.material:material:1.9.0"
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation "androidx.core:core-ktx:1.10.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
-    implementation 'com.android.support:multidex:1.0.3'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation libs.appcompat
+    implementation libs.material
+    implementation libs.constraintlayout
+    implementation libs.core.ktx
+    implementation libs.lifecycle.viewmodel.ktx
+    implementation libs.multidex
+    implementation libs.kotlin.stdlib.jdk7
 }
 repositories {
     mavenCentral()
