--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,17 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.8.10'
-
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.3.1'
-        classpath 'com.appswithlove.updraft:updraft:2.2.2'
-        classpath 'org.jetbrains.dokka:dokka-gradle-plugin:1.7.20'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.appswithlove.loco:loco:0.3.0'
+        classpath libs.tools.build.gradle
+        classpath libs.updraft
+        classpath libs.dokka.gradle.plugin
+        classpath libs.android.maven.gradle.plugin
+        classpath libs.kotlin.gradle.plugin
+        classpath libs.loco
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
