--- a/build.gradle
+++ b/build.gradle
@@ -18,9 +18,15 @@ buildscript {
 }
 
 plugins {
-    id "com.vanniktech.maven.publish" version "0.24.0"
-    id 'com.github.kt3k.coveralls' version '2.4.0'
+    alias libs.plugins.vanniktechMavenPublish
+    alias libs.plugins.coveralls
     id 'signing'
+
+    alias libs.plugins.androidApplication apply false
+    alias libs.plugins.androidLibrary apply false
+    alias libs.plugins.updraft apply false
+    alias libs.plugins.kotlinAndroid apply false
+    alias libs.plugins.loco apply false
 }
 
 allprojects {
