--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,20 @@
+pluginManagement {
+    repositories {
+        google()
+        gradlePluginPortal()
+        mavenCentral()
+        maven { url 'https://maven.scijava.org/content/repositories/public/' }
+    }
+}
+
+dependencyResolutionManagement {
+    repositories {
+        google()
+        mavenCentral()
+        maven { url 'https://maven.scijava.org/content/repositories/public/' }
+    }
+}
+
+rootProject.name = "updraft-sdk-android"
+enableFeaturePreview("TYPESAFE_PROJECT_ACCESSORS")
 include ':app', ':updraft-sdk'
