--- a/updraft-sdk/build.gradle
+++ b/updraft-sdk/build.gradle
@@ -1,10 +1,10 @@
 plugins {
-    id 'com.android.library'
-    id 'kotlin-android'
+    alias libs.plugins.androidLibrary
+    alias libs.plugins.kotlinAndroid
+    alias libs.plugins.loco
+    alias libs.plugins.vanniktechMavenPublish
     id 'maven-publish'
     id 'base'
-    id 'com.appswithlove.loco'
-    id 'com.vanniktech.maven.publish'
 }
 
 group GROUP
