Back to Java 1.8

--- a/updraft-sdk/build.gradle
+++ b/updraft-sdk/build.gradle
@@ -34,12 +34,12 @@ android {
     }
 
     compileOptions {
-        targetCompatibility JavaVersion.VERSION_17
-        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_1_8
     }
 
     kotlinOptions {
-        jvmTarget = "17"
+        jvmTarget = "1.8"
     }
 }
 
@@ -66,6 +66,8 @@ dependencies {
     implementation libs.core.ktx
     implementation libs.lifecycle.viewmodel.ktx
     implementation libs.kotlin.stdlib.jdk7
+
+    implementation libs.multidex
 }
 
 import com.vanniktech.maven.publish.SonatypeHost
