updraft url fix

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,7 @@ android {
     }
 
     updraft {
-        urls['Release'] = "${updraft_uploadUrl}"
+        urls['Release'] = project.hasProperty('updraft_uploadUrl') ? "${updraft_uploadUrl}" : ""
     }
 }
 
