--- a/updraft-sdk/gradle.properties
+++ b/updraft-sdk/gradle.properties
@@ -1,5 +1,35 @@
+# Project-wide Gradle settings.
+# IDE (e.g. Android Studio) users:
+# Gradle settings configured through the IDE *will override*
+# any settings specified in this file.
+# For more details on how to configure your build environment visit
+# http://www.gradle.org/docs/current/userguide/build_environment.html
+# Specifies the JVM arguments used for the daemon process.
+# The setting is particularly useful for tweaking memory settings.
+updraft_uploadUrl=test
+
+org.gradle.jvmargs=-Xmx4096m
+
 GROUP=com.appswithlove.updraft
 POM_ARTIFACT_ID=updraft-sdk
-VERSION_NAME=1.0.12
-APP_KEY=123
-SDK_KEY=123
+VERSION_NAME=1.0.15
+
+POM_NAME=updraft-sdk-android
+POM_DESCRIPTION=Plugin for connecting with GetUpdraft platform
+POM_INCEPTION_YEAR=2020
+
+POM_URL=https://github.com/appswithlove/updraft-sdk-android
+POM_SCM_URL=https://github.com/appswithlove/updraft-sdk-android/
+POM_SCM_CONNECTION=scm:git:git://github.com/appswithlove/updraft-sdk-android.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/appswithlove/updraft-sdk-android.git
+
+POM_LICENCE_NAME=The Apache Software License, Version 2.0
+POM_LICENCE_URL=https://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENCE_DIST=repo
+
+POM_DEVELOPER_ID=yannickpulver
+POM_DEVELOPER_NAME=Yannick Pulver
+POM_DEVELOPER_URL=https://github.com/yannickpulver/
+
+android.useAndroidX=true
+android.enableJetifier=true
