Introduced CurrentActivityManager class to monitor current running Activity

--- a/updraft-sdk/build.gradle
+++ b/updraft-sdk/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation libs.lifecycle.extensions
     implementation libs.lifecycle.runtime
     annotationProcessor libs.lifecycle.compiler
+    implementation libs.androidx.startup
 
     implementation libs.freedrawview
     implementation libs.core.ktx
