--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -46,6 +46,7 @@ tools-build-gradle = { module = "com.android.tools.build:gradle", version.ref = 
 kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
 loco = { module = "com.appswithlove.loco:loco", version = "0.3.1" }
 updraft = { module = "com.appswithlove.updraft:updraft", version.ref = "updraft" }
+androidx-startup = { module = "androidx.startup:startup-runtime", version = "1.1.1" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "gradle" }
