--- a/updraft-sdk/src/main/AndroidManifest.xml
+++ b/updraft-sdk/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest package="com.appswithlove.updraft"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -8,5 +9,15 @@
             android:name="com.appswithlove.updraft.feedback.FeedbackActivity"
             android:theme="@style/Theme.Transparent"
             android:exported="true" />
+
+        <provider
+            android:name="androidx.startup.InitializationProvider"
+            android:authorities="${applicationId}.androidx-startup"
+            android:exported="false"
+            tools:node="merge">
+            <meta-data  android:name="com.appswithlove.updraft.manager.SdkInitializer"
+                android:value="androidx.startup" />
+        </provider>
+
     </application>
 </manifest>
