--- a/freedrawview/build.gradle
+++ b/freedrawview/build.gradle
@@ -26,13 +26,11 @@ ext {
 
 android {
     namespace "com.rm.freedrawview"
-    compileSdkVersion 34
+    compileSdk 34
 
     defaultConfig {
         minSdkVersion 9
-        targetSdkVersion 25
-        versionCode 1
-        versionName "1.1.2"
+        targetSdkVersion 34
     }
     buildTypes {
         release {
@@ -43,6 +41,5 @@ android {
 }
 
 dependencies {
-    implementation "com.android.support:appcompat-v7:25.3.1"
-    implementation "com.android.support:support-annotations:25.3.1"
+    implementation libs.androidx.annotation
 }
