--- a/settings.gradle
+++ b/settings.gradle
@@ -15,4 +15,4 @@ dependencyResolutionManagement {
 
 rootProject.name = "updraft-sdk-android"
 enableFeaturePreview("TYPESAFE_PROJECT_ACCESSORS")
-include ':app', ':updraft-sdk', ':freedrawview'
+include ':app', ':updraft-sdk'
