--- a/updraft-sdk/gradle.properties
+++ b/updraft-sdk/gradle.properties
@@ -12,7 +12,7 @@ org.gradle.jvmargs=-Xmx4096m
 
 GROUP=com.appswithlove.updraft
 POM_ARTIFACT_ID=updraft-sdk
-VERSION_NAME=1.0.19
+VERSION_NAME=1.1.0
 
 POM_NAME=updraft-sdk-android
 POM_DESCRIPTION=Plugin for connecting with GetUpdraft platform
@@ -23,9 +23,9 @@ POM_SCM_URL=https://github.com/appswithlove/updraft-sdk-android/
 POM_SCM_CONNECTION=scm:git:git://github.com/appswithlove/updraft-sdk-android.git
 POM_SCM_DEV_CONNECTION=scm:git:ssh://git@github.com/appswithlove/updraft-sdk-android.git
 
-POM_LICENCE_NAME=The Apache Software License, Version 2.0
-POM_LICENCE_URL=https://www.apache.org/licenses/LICENSE-2.0.txt
-POM_LICENCE_DIST=repo
+POM_LICENSE_NAME=The Apache Software License, Version 2.0
+POM_LICENSE_URL=https://www.apache.org/licenses/LICENSE-2.0.txt
+POM_LICENSE_DIST=repo
 
 POM_DEVELOPER_ID=yannickpulver
 POM_DEVELOPER_NAME=Yannick Pulver
